syntax = "proto3";

option java_multiple_files = true;
option java_package = "server";
option java_outer_classname = "CrudProto";

package server;

// The greeting service definition.
service Crud {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Read (ReadRequest) returns (ReadResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
  bytes key = 1;
  bytes value = 2;  
}
message CreateResponse
{
   bool retorno = 1;
}

message ReadRequest {
  bytes key = 1;
}

message ReadResponse {
  bytes value = 1;
}

message UpdateRequest {
  bytes key = 1;
  bytes value = 2;
}

message UpdateResponse {
  bool retorno = 1;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  bool retorno = 1;
}
